--- a/package.json
+++ b/package.json
@@ -1,36 +1,43 @@
 {
-  "name": "restaurant-booking-system",
+  "name": "",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "type": "module",
-  "directories": {
-    "test": "test"
+  "license": "AGPL-version-3.0",
+  "private": false,
+  "engines": {
+    "node": ">= 14.0.0",
+    "npm": ">= 6.0.0"
   },
-  "scripts": {
-    "dev": "nodemon",
-    "start": "node index.js",
-    "test": "mocha"
-  },
+  "homepage": "",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/codex-academy/Restaurant-Booking-System.git"
+    "url": ""
   },
+  "bugs": "",
   "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/codex-academy/Restaurant-Booking-System/issues"
+  "author": {
+    "name": "",
+    "email": "",
+    "url": ""
   },
-  "homepage": "https://github.com/codex-academy/Restaurant-Booking-System#readme",
+  "contributors": [],
+  "scripts": {
+    "dev": "",
+    "test": ""
+  },
   "dependencies": {
-    "ansi-colors": "^4.1.3",
     "body-parser": "^1.20.2",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-flash": "^0.0.2",
     "express-handlebars": "^7.1.2",
-    "flash-express": "^1.0.4",
+    "express-session": "^1.17.3",
+    "handlebars": "^4.7.8",
     "mocha": "^10.2.0",
     "nodemon": "^3.0.1",
+    "pg": "^8.11.3",
     "pg-promise": "^11.5.4"
   }
 }
